; ModuleID = '/home/carl/AnghaBench/libsodium/src/libsodium/crypto_core/ed25519/ref10/extr_ed25519_ref10.c_ristretto255_elligator.c'
source_filename = "/home/carl/AnghaBench/libsodium/src/libsodium/crypto_core/ed25519/ref10/extr_ed25519_ref10.c_ristretto255_elligator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32 }

@sqrtm1 = common dso_local global i32 0, align 4
@onemsqd = common dso_local global i32 0, align 4
@d = common dso_local global i32 0, align 4
@sqdmone = common dso_local global i32 0, align 4
@sqrtadm1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i32)* @ristretto255_elligator to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ristretto255_elligator(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32 %1, i32* %4, align 4
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @fe25519_1(i32 %20)
  %22 = load i32, i32* %8, align 4
  %23 = load i32, i32* %4, align 4
  %24 = call i32 @fe25519_sq(i32 %22, i32 %23)
  %25 = load i32, i32* %8, align 4
  %26 = load i32, i32* @sqrtm1, align 4
  %27 = load i32, i32* %8, align 4
  %28 = call i32 @fe25519_mul(i32 %25, i32 %26, i32 %27)
  %29 = load i32, i32* %13, align 4
  %30 = load i32, i32* %8, align 4
  %31 = load i32, i32* %7, align 4
  %32 = call i32 @fe25519_add(i32 %29, i32 %30, i32 %31)
  %33 = load i32, i32* %13, align 4
  %34 = load i32, i32* %13, align 4
  %35 = load i32, i32* @onemsqd, align 4
  %36 = call i32 @fe25519_mul(i32 %33, i32 %34, i32 %35)
  %37 = load i32, i32* %5, align 4
  %38 = call i32 @fe25519_1(i32 %37)
  %39 = load i32, i32* %5, align 4
  %40 = load i32, i32* %5, align 4
  %41 = call i32 @fe25519_neg(i32 %39, i32 %40)
  %42 = load i32, i32* %9, align 4
  %43 = load i32, i32* %8, align 4
  %44 = load i32, i32* @d, align 4
  %45 = call i32 @fe25519_add(i32 %42, i32 %43, i32 %44)
  %46 = load i32, i32* %14, align 4
  %47 = load i32, i32* %8, align 4
  %48 = load i32, i32* @d, align 4
  %49 = call i32 @fe25519_mul(i32 %46, i32 %47, i32 %48)
  %50 = load i32, i32* %14, align 4
  %51 = load i32, i32* %5, align 4
  %52 = load i32, i32* %14, align 4
  %53 = call i32 @fe25519_sub(i32 %50, i32 %51, i32 %52)
  %54 = load i32, i32* %14, align 4
  %55 = load i32, i32* %14, align 4
  %56 = load i32, i32* %9, align 4
  %57 = call i32 @fe25519_mul(i32 %54, i32 %55, i32 %56)
  %58 = load i32, i32* %10, align 4
  %59 = load i32, i32* %13, align 4
  %60 = load i32, i32* %14, align 4
  %61 = call i32 @ristretto255_sqrt_ratio_m1(i32 %58, i32 %59, i32 %60)
  %62 = sub nsw i32 1, %61
  store i32 %62, i32* %19, align 4
  %63 = load i32, i32* %11, align 4
  %64 = load i32, i32* %10, align 4
  %65 = load i32, i32* %4, align 4
  %66 = call i32 @fe25519_mul(i32 %63, i32 %64, i32 %65)
  %67 = load i32, i32* %11, align 4
  %68 = load i32, i32* %11, align 4
  %69 = call i32 @fe25519_abs(i32 %67, i32 %68)
  %70 = load i32, i32* %11, align 4
  %71 = load i32, i32* %11, align 4
  %72 = call i32 @fe25519_neg(i32 %70, i32 %71)
  %73 = load i32, i32* %10, align 4
  %74 = load i32, i32* %11, align 4
  %75 = load i32, i32* %19, align 4
  %76 = call i32 @fe25519_cmov(i32 %73, i32 %74, i32 %75)
  %77 = load i32, i32* %5, align 4
  %78 = load i32, i32* %8, align 4
  %79 = load i32, i32* %19, align 4
  %80 = call i32 @fe25519_cmov(i32 %77, i32 %78, i32 %79)
  %81 = load i32, i32* %6, align 4
  %82 = load i32, i32* %8, align 4
  %83 = load i32, i32* %7, align 4
  %84 = call i32 @fe25519_sub(i32 %81, i32 %82, i32 %83)
  %85 = load i32, i32* %6, align 4
  %86 = load i32, i32* %6, align 4
  %87 = load i32, i32* %5, align 4
  %88 = call i32 @fe25519_mul(i32 %85, i32 %86, i32 %87)
  %89 = load i32, i32* %6, align 4
  %90 = load i32, i32* %6, align 4
  %91 = load i32, i32* @sqdmone, align 4
  %92 = call i32 @fe25519_mul(i32 %89, i32 %90, i32 %91)
  %93 = load i32, i32* %6, align 4
  %94 = load i32, i32* %6, align 4
  %95 = load i32, i32* %14, align 4
  %96 = call i32 @fe25519_sub(i32 %93, i32 %94, i32 %95)
  %97 = load i32, i32* %15, align 4
  %98 = load i32, i32* %10, align 4
  %99 = load i32, i32* %10, align 4
  %100 = call i32 @fe25519_add(i32 %97, i32 %98, i32 %99)
  %101 = load i32, i32* %15, align 4
  %102 = load i32, i32* %15, align 4
  %103 = load i32, i32* %14, align 4
  %104 = call i32 @fe25519_mul(i32 %101, i32 %102, i32 %103)
  %105 = load i32, i32* %16, align 4
  %106 = load i32, i32* %6, align 4
  %107 = load i32, i32* @sqrtadm1, align 4
  %108 = call i32 @fe25519_mul(i32 %105, i32 %106, i32 %107)
  %109 = load i32, i32* %12, align 4
  %110 = load i32, i32* %10, align 4
  %111 = call i32 @fe25519_sq(i32 %109, i32 %110)
  %112 = load i32, i32* %17, align 4
  %113 = load i32, i32* %7, align 4
  %114 = load i32, i32* %12, align 4
  %115 = call i32 @fe25519_sub(i32 %112, i32 %113, i32 %114)
  %116 = load i32, i32* %18, align 4
  %117 = load i32, i32* %7, align 4
  %118 = load i32, i32* %12, align 4
  %119 = call i32 @fe25519_add(i32 %116, i32 %117, i32 %118)
  %120 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %121 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %120, i32 0, i32 3
  %122 = load i32, i32* %121, align 4
  %123 = load i32, i32* %15, align 4
  %124 = load i32, i32* %18, align 4
  %125 = call i32 @fe25519_mul(i32 %122, i32 %123, i32 %124)
  %126 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %127 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %126, i32 0, i32 2
  %128 = load i32, i32* %127, align 4
  %129 = load i32, i32* %17, align 4
  %130 = load i32, i32* %16, align 4
  %131 = call i32 @fe25519_mul(i32 %128, i32 %129, i32 %130)
  %132 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %133 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %132, i32 0, i32 1
  %134 = load i32, i32* %133, align 4
  %135 = load i32, i32* %16, align 4
  %136 = load i32, i32* %18, align 4
  %137 = call i32 @fe25519_mul(i32 %134, i32 %135, i32 %136)
  %138 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %139 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %138, i32 0, i32 0
  %140 = load i32, i32* %139, align 4
  %141 = load i32, i32* %15, align 4
  %142 = load i32, i32* %17, align 4
  %143 = call i32 @fe25519_mul(i32 %140, i32 %141, i32 %142)
  ret void
}

declare dso_local i32 @fe25519_1(i32) #1

declare dso_local i32 @fe25519_sq(i32, i32) #1

declare dso_local i32 @fe25519_mul(i32, i32, i32) #1

declare dso_local i32 @fe25519_add(i32, i32, i32) #1

declare dso_local i32 @fe25519_neg(i32, i32) #1

declare dso_local i32 @fe25519_sub(i32, i32, i32) #1

declare dso_local i32 @ristretto255_sqrt_ratio_m1(i32, i32, i32) #1

declare dso_local i32 @fe25519_abs(i32, i32) #1

declare dso_local i32 @fe25519_cmov(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
